@@ -43,6 +43,12 @@
 #-- Show status OSD key
 #key_showstatusosd=
 
+#-- Show album's track number if not equal to playlist's track number;
+#-- Playlists can be long, traversing multiple directories.
+#-- This will show the current album's track number in addition
+#-- to the (encompassing) playlist position (if present in metadata).
+#show_albumtrack_number=no
+
 #osd_message_maxlength=96
 
 #-- Styling options
